bobcat (2.11.00) [ISN]

  * Repaired bug in Process due to which single quoted process arguments
    were not correctly passed on to the child process

  * When using Process::IGNORE_ALL in combination with other Process:IOMode
    flags an std::invalid_argument exception is thrown

  * Removed all Errno insertable/throwable manipulator calls from Bobcat

  * Removed empty source file bigint/checked5.cc

  * IOStream(istream &, ostream &)'s constructor now also opens the IOStream
    object (as it always should have done)

  * OFdStreambuf and IFdStreambuf have a new member (int fd()) returning the
    File Descriptor. Their descructors are not defined inline anymore (but
    their implementations have not changed) and they have a new member
    (close()) closing the streambuf. Closed OFdStreambuf and IFdStreambuf
    objects can again be opened using open()

  * Updated several man-pages

bobcat (2.10.03)

  * Matthias Klose detected several bugs/omissions in Bobcat's  shared library
    construction. Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 29 Dec 2010 17:14:06 +0100

bobcat (2.10.02)

  * ConfigFile's size() member was missing. Now repaired.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 25 Dec 2010 11:02:02 +0100

bobcat (2.10.01)

  * TableLines' default and move constructor and move assignment operator
    were accidentally put in the private section of their class. Now public.

  * Configfile's overloaded assignment operator used non const &
    argument. Repaired. 

  * CmdFinderBase's overloaded assignment operator cannot be defaulted as it
    lives in the class's protected section. Added explicit implementation of
    the overloaded assignment operator.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 19 Dec 2010 21:29:26 +0100

bobcat (2.10.00)

  * Reorganized the class ConfigFile. It used inheritance the wrong way (it
    inherited to reuse its base class rather than the base class being reused