@@ -6,13 +6,6 @@ ifdstreambuf.yo
 milter.yo
 ofdstreambuf.yo
 
-Process: Add DIRECT description to man page (?)
-        Implement DIRECT ?
-        Perform checks for illegal flag combinations
-
-CGI: test CGI for proper funcioning with unordered_map rather than map
-     add descriptions of static members to the man-page
-
 --
 
 
