@@ -217,7 +217,34 @@ manpagesection(MEMBER FUNCTIONS)
         tt(ENCTYPE="multipart/form-data") the query string is empty). 
 
 
-itb(report())
+    itb(report())
+        The tt(report) member silently returns if no errors were encountered
+        while processing form-data. Otherwise, the tt(html) file generated by
+        the tt(CGI) program will display a line starting with tt(FBB::CGI),
+        followed by the status report. 
+
+        The following status report messages are presently defined:
+        itemization( 
+       itt(Content-Disposition not recognized in:), which is followed by the
+        line where the tt(Content-Disposition) was expected. This may occur
+        when processing tt(multipart/form) data.
+       itt(Invalid multipart/form-data). This message can be generated when
+        readling lines while processing tt(multipart/form) data.
+       itt(GET/POST REQUEST_METHOD not found). This message is shown if the
+        program couldn't find the form's tt(REQUEST_METHOD) type (i.e.,
+        tt(GET) or tt(POST)).
+       itt(Invalid CONTENT_LENGHT in POSTed form). This message is shown if
+        the content-length header has an incorrect value.
+       itt(Content-Type not found for file-field), followed by the file's
+        field name. This message is shown if no tt(Content-Type) specification
+        was found in an uploaded form.
+       itt(Can't open a file to write an uploaded file). This message
+        indicates that the CGI program was unable to open a file to write an
+        uploaded file to. This can be caused by an overfull disk or partition
+        or by incorrect write-permissions.
+       itt(multipart/form-data: no end-boundary found). This message is shown
+        if the end-boundary was missing in a tt(multipart/form-data) form.
+        )
 
     itb(void setFileDestination(std::string const &path, 
                                 std::string const &prefix = "",
@@ -246,8 +273,13 @@ tt(FBB::Errno) exception will be thrown.
 manpagesection(STATIC MEMBERS)
     itemization(
     itb(std::string dos2unix(std::string const &text))
+        This member converts all tt(\r\n) character combinations in tt(text)
+        into plain tt(\n) characters, returning the converted text.
 
-    itb(std::string unPercent(std::string const &text))
+    itb(std::string unPercent(std::string const &text)) This member converts
+        all tt(%xx) encoded characters into their corresponding ASCII
+        values. Also, tt(+) characters are converted to single blank
+        spaces. The converted string is returned.
     )    
 
 manpagesection(EXAMPLE)
