@@ -7,7 +7,7 @@ void Process::initialize(size_t timeLimit, iomode mode,
 
     d_setTimeLimit = d_timeLimit = timeLimit;
     d_setProcessType = d_processType = processType; 
-    d_setMode = sanitizeIOMode(mode);
+    d_setMode = sanitizeIOMode(mode & ~(IN_PIPE | OUT_PIPE | CLOSE_ON_EXEC));
 
     open(d_iChildOut, d_oChildIn);
 }
