@@ -1,4 +1,13 @@
-bobcat (2.11.00) [ISN]
+bobcat (2.11.01)
+
+  * Lacking descriptions of some FBB::CGI members were added to the 
+    cgi(3bobcat) man-page.
+
+  * The CGI class now uses a std::unordered_map, rather than a std::map
+
+  * Process now supports IOMode::DIRECT
+
+bobcat (2.11.00)
 
   * Repaired bug in Process due to which single quoted process arguments
     were not correctly passed on to the child process
